# mlx_week_1

./: .gitignore  README.md  bez.py  main.py  pyproject.toml
hacker-news-forecast/: SkipGram.py  config.py  data_gathering.py  data_processing.py  model.py  run.py
hacker_news_forecast/: SkipGram.py  config.py  data.py  data_gathering.py  data_processing.py  main.py  model.py  run.py
word2vec/: SkipGram.py  config.py  data.py  get_data.py  main.py  model.py  preprocess.py  preprocessing.py  requirements.txt  run_word2vec.py
word2vec/wandb/: latest-run
word2vec/wandb/run-20250130_123931-6xilqfj5/: run-6xilqfj5.wandb
word2vec/wandb/run-20250130_123931-6xilqfj5/files/: config.yaml  wandb-metadata.json  wandb-summary.json
word2vec/wandb/run-20250130_124055-vnpfx98s/: run-vnpfx98s.wandb
word2vec/wandb/run-20250130_124055-vnpfx98s/files/: config.yaml  wandb-metadata.json  wandb-summary.json
word2vec/wandb/run-20250130_124313-0kaiuhwf/files/: config.yaml  wandb-metadata.json  wandb-summary.json
word2vec/wandb/run-20250130_132207-ob06vccl/: run-ob06vccl.wandb
word2vec/wandb/run-20250130_132207-ob06vccl/files/: config.yaml  wandb-metadata.json  wandb-summary.json
word2vec/wandb/run-20250130_132338-f0g12gv7/: run-f0g12gv7.wandb
word2vec/wandb/run-20250130_132338-f0g12gv7/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
word2vec/wandb/run-20250130_132643-s36sf521/files/: config.yaml  wandb-metadata.json  wandb-summary.json
word2vec/wandb/run-20250130_141710-onw9z1cv/: run-onw9z1cv.wandb
(+3 files in other folders)
